# onqlclient-cpp

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: release.yml
include/onql/: client.hpp
src/: client.cpp
